[workspace]

members = [
    "gcd",
    "heap",
    "bubble_sort",
    "merge_sort",
    "quick_sort",
    "random",
    "fibonacci",
    "list",
    "dlist",
    "tree",
    "balanced_tree",
    "skip_list",
    "huffman",
    "graph",
    "shortest_path",
    "greedy_salesman",
    "better_salesman",
    "hasher",
    "bucket_list",
    "hash_map",
    "ecs",
    "blob",
]
